k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
  labels:
    kubernetes.io/metadata.name: homework
