k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: homework
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: dz6
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
