k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: homework
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: dz6
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: homework-frontend-transport@kubernetescrd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
