k8s/postgres-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: homework
  labels:
    app.kubernetes.io/name: postgres
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: homework
  labels:
    app.kubernetes.io/name: postgres
spec:
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
