k8s/postgres-ha-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-postgres-ha
  namespace: homework
  labels:
    app.kubernetes.io/part-of: dz6
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres-ha
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Оператор CNPG обращается к instance manager
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - protocol: TCP
          port: 8000

    # Репликация между экземплярами PostgreSQL
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgres-ha
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000

    # Доступ backend к primary через postgres-ha-rw
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend
      ports:
        - protocol: TCP
          port: 5432

  egress:
    # Репликация между экземплярами
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgres-ha
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000

    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Kubernetes API через ClusterIP
    - to:
        - ipBlock:
            cidr: 10.96.0.1/32
      ports:
        - protocol: TCP
          port: 443

    # Kubernetes API после Service DNAT
    - to:
        - ipBlock:
            cidr: 192.168.56.11/32
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-postgres-ha
  namespace: homework
  labels:
    app.kubernetes.io/part-of: dz6
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: backend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgres-ha
      ports:
        - protocol: TCP
          port: 5432
